--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: beer, local: true) do |form| %>
-  <% if beer.errors.any? %>
+<%= form_for(@beer) do |f| %>
+  <% if @beer.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(beer.errors.count, "error") %> prohibited this beer from being saved:</h2>
+      <h2><%= pluralize(@beer.errors.count, "error") %> prohibited this beer from being saved:</h2>
 
       <ul>
-      <% beer.errors.full_messages.each do |message| %>
+      <% @beer.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,21 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
-
   <div class="field">
-    <%= form.label :style %>
-    <%= form.text_field :style %>
+    <%= f.label :style %><br>
+    <%= f.text_field :style %>
   </div>
-
   <div class="field">
-    <%= form.label :brewery_id %>
-    <%= form.number_field :brewery_id %>
+    <%= f.label :brewery_id %><br>
+    <%= f.number_field :brewery_id %>
   </div>
-
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
