--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Beers</h1>
+<h1>Listing Beers</h1>
 
 <table>
   <thead>
@@ -15,10 +15,9 @@
   <tbody>
     <% @beers.each do |beer| %>
       <tr>
-        <td><%= beer.name %></td>
+        <td><%= link_to beer.name, beer %></td>
         <td><%= beer.style %></td>
-        <td><%= beer.brewery_id %></td>
-        <td><%= link_to 'Show', beer %></td>
+        <td><%= beer.brewery.name %></td>
         <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
         <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -28,4 +27,5 @@
 
 <br>
 
-<%= link_to 'New Beer', new_beer_path %>
+<%= link_to 'New Beer', new_beer_path %><br>
+<%= link_to 'List of breweries', breweries_path %>
