--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: brewery, local: true) do |form| %>
-  <% if brewery.errors.any? %>
+<%= form_for(@brewery) do |f| %>
+  <% if @brewery.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(brewery.errors.count, "error") %> prohibited this brewery from being saved:</h2>
+      <h2><%= pluralize(@brewery.errors.count, "error") %> prohibited this brewery from being saved:</h2>
 
       <ul>
-      <% brewery.errors.full_messages.each do |message| %>
+      <% @brewery.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,16 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
-
   <div class="field">
-    <%= form.label :year %>
-    <%= form.number_field :year %>
+    <%= f.label :year %><br>
+    <%= f.number_field :year %>
   </div>
-
   <div class="actions">
-    <%= form.submit %>
+    <%= f.submit %>
   </div>
 <% end %>
