--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -15,5 +15,13 @@
   <%= @beer.brewery_id %>
 </p>
 
+<p>
+  <% if @beer.ratings.empty? %>
+    <%= "#{@beer.name} has not yet been rated!" %>
+  <% else %>
+    <%= "#{@beer.name} has #{@beer.ratings.count} ratings, average #{@beer.average_rating}." %>"
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <%= link_to 'Back', beers_path %>
