--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,8 @@
 <h2>List of ratings</h2>
+<ul>
+ <% @ratings.each do |rating| %>
+   <li> <%= rating %> </li>
+ <% end %>
+</ul>
 
-<p>To be completed...</p>
+Users have given <%= @ratings.count %> ratings so far!
