--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -19,7 +19,7 @@
   <% if @beer.ratings.empty? %>
     <%= "#{@beer.name} has not yet been rated!" %>
   <% else %>
-    <%= "#{@beer.name} has #{@beer.ratings.count} ratings, average #{@beer.average_rating}." %>"
+    <%= "#{@beer.name} has #{pluralize(@beer.ratings.count,'rating')}, average #{@beer.average_rating}." %>"
   <% end %>
 </p>
 
