--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :style %><br>
-    <%= f.text_field :style %>
+    <%= f.select :style, options_for_select(@styles, :to_s) %>
   </div>
   <div class="field">
     <%= f.label :brewery_id %><br>
