--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,8 +1,10 @@
 <h2>List of ratings</h2>
 <ul>
  <% @ratings.each do |rating| %>
-   <li> <%= rating %> </li>
+   <li> <%= rating %><tb> <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' } %> </li>
  <% end %>
 </ul>
-
+<p>
 Users have given <%= @ratings.count %> ratings so far!
+</p>
+<%= link_to 'New rating', new_rating_path %>
