--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <% if current_user %>
       <%= link_to current_user.username, current_user %>
       <%= link_to 'rate a beer', new_rating_path %>
+      <%= link_to 'join a beer club', new_membership_path %>
       <%= link_to 'sign out', session_path, method: :delete %>
     <% else %>
       <%= link_to 'sign up', new_user_path %>
