--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -15,5 +15,15 @@
   <%= @beer_club.city %>
 </p>
 
+<p>
+  <strong>Members:</strong>
+</p>
+
+<ul>
+  <% @beer_club.members.each do |m| %>
+    <li><%= link_to m.username, m %></li>
+  <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> |
 <%= link_to 'Back', beer_clubs_path %>
