--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -14,8 +14,8 @@
   <tbody>
     <% @memberships.each do |membership| %>
       <tr>
-        <td><%= membership.user_id %></td>
-        <td><%= membership.beer_club_id %></td>
+        <td><%= membership.user.username %></td>
+        <td><%= membership.beer_club.name %></td>
         <td><%= link_to 'Show', membership %></td>
         <td><%= link_to 'Edit', edit_membership_path(membership) %></td>
         <td><%= link_to 'Destroy', membership, method: :delete, data: { confirm: 'Are you sure?' } %></td>
