Tehtiin tehtävät 13 ja 14.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,12 @@
 
 <ul>
 <% @user.ratings.each do |r| %>
-  <li><%= r.to_s %> <%= link_to 'delete', r, method: :delete %></li>
+  <li>
+    <%= r.to_s %>
+    <% if @user == current_user %>
+      <%= link_to 'delete', r, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% end %>
+  </li>
 <% end %>
 </ul>
 
@@ -34,5 +39,8 @@
   </ul>
 <% end %>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if @user == current_user %>
+  <%= link_to 'Edit', edit_user_path(@user) %> |
+  <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
 <%= link_to 'Back', users_path %>
