--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,13 +11,15 @@
 <% if @user.ratings.empty? %>
   <%= "#{un} hasn't made any ratings yet." %>
 <% else %>
-  <%= "#{un} has made #{pluralize @user.ratings.count, 'rating'}, average rating: #{@user.average_rating}"%>
+  <%= "#{un} has made #{pluralize @user.ratings.count, 'rating'}, average rating: #{@user.average_rating}"%><br>
+  <%= "#{un}'s favorite beer is #{@user.favorite_beer} and the favorite style of beer is #{@user.favorite_style}."%><br>
+  <%= "#{un}'s favorite brewery is #{@user.favorite_brewery}."%>
 <% end %>
 
 <ul>
 <% @user.ratings.each do |r| %>
   <li>
-    <%= r.to_s %>
+    <%= link_to r.to_s, r.beer %>
     <% if @user == current_user %>
       <%= link_to 'delete', r, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
