--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -17,7 +17,13 @@
     <% @places.each do |place| %>
       <tr>
         <% Place.rendered_fields.each do |field| %>
-          <td><%= place.send(field) %></td>
+          <td>
+          <% if(field == :name) %>
+            <%= link_to place.send(field), place_path(place.id) %>
+          <% else %>
+            <%= place.send(field) %>
+          <% end %>
+          </td>
         <% end %>
       </tr>
     <% end %>
