--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -25,14 +25,18 @@
   <% end %>
 </ul>
 
-<% if (user = User.find_by id: current_user) && @beer_club.members.exclude?(user) %>
-  <h4>join club:</h4>
-
-  <%= form_for(@membership) do |f| %>
-    <%= f.hidden_field :beer_club_id %>
-    <%= f.submit %>
+<% if (user = User.find_by id: current_user) %>
+  <% if(@beer_club.members.exclude?(user)) %>
+    <%= form_for(@membership) do |f| %>
+      <%= f.hidden_field :beer_club_id %>
+      <%= f.submit value: "Join club!" %>
+    <% end %>
+    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
+  <% else %>
+    <%= form_for(@membership, method: "delete") do |f| %>
+      <%= f.hidden_field :beer_club_id %>
+      <%= f.submit value: "Leave the club." %>
+    <% end %>
   <% end %>
-
-  <%= link_to 'Edit', edit_beer_club_path(@beer_club) %> 
 <% end %>
 <%= link_to 'Back', beer_clubs_path %>
