--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -16,8 +16,8 @@
     <% @beers.each do |beer| %>
       <tr>
         <td><%= link_to beer.name, beer %></td>
-        <td><%= beer.style %></td>
-        <td><%= beer.brewery.name %></td>
+        <td><%= link_to beer.style.name, beer.style %></td>
+        <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <% if current_user%>
           <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
           <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
