--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %></p>
+
 
 <h1>Listing breweries</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
