--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,33 +2,85 @@
 <html>
 <head>
   <title>Ratebeer</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
 
-  <div class="navibar">
-    <%= link_to 'breweries', breweries_path %>
-    <%= link_to 'beers', beers_path %>
-    <%= link_to 'ratings', ratings_path %>
-    <%= link_to 'users', users_path %>
-    <%= link_to 'beer clubs', beer_clubs_path %>
-    <%= link_to 'places', places_path %>
-    <%= link_to 'styles', styles_path %>
-    |
-    <% if current_user %>
-      <%= link_to current_user.username, current_user %>
-      <%= link_to 'rate a beer', new_rating_path %>
-      <%= link_to 'join a beer club', new_membership_path %>
-      <%= link_to 'sign out', session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'sign up', new_user_path %>
-      <%= link_to 'sign in', new_session_path %>
-    <% end %>
-  </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<%= yield %>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <%= link_to 'breweries', breweries_path, { class: "nav-link" } %>
+          </li>      
+          <li class="nav-item">
+            <%= link_to 'beers', beers_path, { class: "nav-link" } %>
+          </li>     
+          <li class="nav-item">
+            <%= link_to 'styles', styles_path, { class: "nav-link" } %>
+          </li>   
+          <li class="nav-item">
+            <%= link_to 'ratings', ratings_path, { class: "nav-link" } %>
+          </li>       
+          <li class="nav-item">
+            <%= link_to 'users', users_path, { class: "nav-link" } %>
+          </li>  
+          <li class="nav-item">
+            <%= link_to 'clubs', beer_clubs_path, { class: "nav-link" } %>
+          </li>   
+          <li class="nav-item">
+            <%= link_to 'places', places_path, { class: "nav-link" } %>
+          </li> 
+          <% if current_user %>
+            <li class="nav-item">
+              <%= link_to current_user.username, current_user, { class: "nav-link" } %>
+            </li> 
+            <li class="nav-item">
+              <%= link_to 'rate a beer ', new_rating_path, { class: "nav-link" } %>
+            </li>   
+            <li class="nav-item">
+              <%= link_to 'join a club ', new_membership_path, { class: "nav-link" } %>
+            </li> 
+            <li class="nav-item">
+              <%= link_to 'signout', signout_path, { class: "nav-link" } %>
+            </li>                    
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'signin', signin_path, { class: "nav-link" } %>
+            </li>  
+            <li class="nav-item">
+              <%= link_to 'signup', signup_path, { class: "nav-link" } %>
+            </li>                        
+          <% end %>                            
+        </ul>
+      </div>
+    </nav>
 
-</body>
+    <div class="container">
+      <% if notice %>
+        <div class="alert alert-primary" role="alert">
+          <%= notice %>
+        </div>
+      <% end %>
+      <div class="row">
+        <div class="col-sm-8">
+          <%= yield %>
+        </div>
+        <div class="col-sm-4">
+          <img 
+            src="http://www.cs.helsinki.fi/u/mluukkai/wadror/pint.jpg" 
+            width="200"
+            style="padding-top:30px"
+          >
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
