--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
 <h1>Beer places search</h1>
 
@@ -15,7 +15,7 @@
 
 <% if @places %>
   <h2> Places </h2>
-  <table>
+  <table class="table">
     <thead>
       <% Place.rendered_fields.each do |field| %>
         <th><%= field %></th>
