Tehtiin tehtävät 2 ja 3.

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -19,8 +19,8 @@
         <td><%= link_to beer.style.name, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
         <% if current_user%>
-          <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-          <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_beer_path(beer), class:'btn btn-warning' %></td>
+          <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %></td>
         <% end %>
       </tr>
     <% end %>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to('New Beer', new_beer_path) if current_user %>
+<%= link_to('New Beer', new_beer_path, class:'btn btn-primary') if current_user %>
