--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -11,15 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :year %><br>
-    <%= f.number_field :year %>
+    <%= f.number_field :year, class:"form-control" %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class:"btn btn-primary" %>
   </div>
 <% end %>
