--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -17,8 +17,8 @@
         <td><%= link_to brewery.name, brewery %></td>
         <td><%= brewery.year %></td>
         <% if current_user %>
-          <td><%= link_to 'Edit', edit_brewery_path(brewery) %></td>
-          <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_brewery_path(brewery), class:"btn btn-primary" %></td>
+          <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %></td>
         <% end %>
       </tr>
     <% end %>
@@ -29,4 +29,4 @@
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path if current_user %><br>
+<%= link_to 'New Brewery', new_brewery_path, class:"btn btn-primary" if current_user %><br>
