--- a/app/views/memberships/_form.html.erb
+++ b/app/views/memberships/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.select :beer_club_id, options_from_collection_for_select(@beer_clubs, :id, :name) %>
   </div>
 
