--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <% if @user.new_record? %>
-    <div class="field">
+    <div class="form-group">
       <%= form.label :username %>
       <%= form.text_field :username %>
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :password %><br />
     <%= form.password_field :password %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :password_confirmation %><br />
     <%= form.password_field :password_confirmation  %>
   </div>
