Aloitettiin tehtävät 6 ja 7.

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,6 +1,11 @@
 
 
-<h2><%= @brewery.name %></h2>
+<h2>
+  <%= @brewery.name %>
+  <% if not @brewery.active?  %>
+    <span class="badge badge-info">retired</span>
+  <% end %>
+</h2>
 <i>Established in <%= @brewery.year %></i><br>
 Number of products: <%= @brewery.beers.count %><br>
 <p>
