--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :year %><br>
     <%= f.number_field :year, class:"form-control" %>
   </div>
+  <div class="form-group">
+    <%= f.label :active %>
+    <%= f.check_box :active, class:"form-control" %>
+  </div>
   <div class="actions">
     <%= f.submit class:"btn btn-primary" %>
   </div>
