--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <h2>
   <%= @brewery.name %>
   <% if not @brewery.active?  %>
@@ -17,8 +15,7 @@ Number of products: <%= @brewery.beers.count %><br>
   <% if @brewery.ratings.empty? %>
     <%= "Our products haven't been rated yet." %>
   <% else %>
-      <%= "Our products have been rated #{pluralize @brewery.ratings.count, 'time'} with an average rating of #{@brewery.average_rating}"%>
+      <%= "Our products have been rated #{pluralize @brewery.ratings.count, 'time'} with an average rating of #{round @brewery.average_rating}"%>
   <% end %>
-</p>
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+
+<%= edit_and_destroy_buttons(@brewery) %>
