--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -31,7 +31,6 @@
       <%= f.hidden_field :beer_club_id %>
       <%= f.submit value: "Join club!" %>
     <% end %>
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
   <% else %>
     <%= form_for(@membership, method: "delete") do |f| %>
       <%= f.hidden_field :beer_club_id %>
@@ -39,4 +38,5 @@
     <% end %>
   <% end %>
 <% end %>
-<%= link_to 'Back', beer_clubs_path %>
+
+<%= edit_and_destroy_buttons(@beer_club) %>
