--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -8,6 +8,7 @@
       <th>Name</th>
       <th>Style</th>
       <th>Brewery</th>
+      <th>Average Rating</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,10 +19,8 @@
         <td><%= link_to beer.name, beer %></td>
         <td><%= link_to beer.style.name, beer.style %></td>
         <td><%= link_to beer.brewery.name, beer.brewery %></td>
-        <% if current_user%>
-          <td><%= link_to 'Edit', edit_beer_path(beer), class:'btn btn-warning' %></td>
-          <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-danger' %></td>
-        <% end %>
+        <td><%= round beer.average_rating %></td>
+        <td><%= edit_and_destroy_buttons(beer) %></td>
       </tr>
     <% end %>
   </tbody>
