--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -17,19 +17,8 @@
   <% if @beer.ratings.empty? %>
     <%= "#{@beer.name} has not yet been rated!" %>
   <% else %>
-    <%= "#{@beer.name} has #{pluralize(@beer.ratings.count,'rating')}, average #{@beer.average_rating}." %>"
+    <%= "#{@beer.name} has #{pluralize(@beer.ratings.count,'rating')}, average #{round @beer.average_rating}." %>"
   <% end %>
 </p>
 
-<% if current_user %>
-  <h4>give a rating:</h4>
-
-  <%= form_for(@rating) do |f| %>
-    <%= f.hidden_field :beer_id %>
-    score: <%= f.number_field :score %>
-    <%= f.submit class:"btn btn-primary" %>
-  <% end %>
-
-  <%= link_to 'Edit', edit_beer_path(@beer) %> 
-  <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= edit_and_destroy_buttons(@beer) %>
