--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -4,6 +4,9 @@
     <span class="badge badge-info">retired</span>
   <% end %>
 </h2>
+
+<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+
 <i>Established in <%= @brewery.year %></i><br>
 Number of products: <%= @brewery.beers.count %><br>
 <p>
