--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,24 +1,33 @@
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+<% cache @beer do %>
+  <h2><%= @beer.name %></h2>
 
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style %>
-</p>
+  <p>
+    <strong>Style:</strong>
+    <%= @beer.style %>
+  </p>
 
-<p>
-  <strong>Brewery:</strong>
-  <%= @beer.brewery.name %>
-</p>
+  <p>
+    <strong>Brewery:</strong>
+    <%= @beer.brewery.name %>
+  </p>
 
-<p>
-  <% if @beer.ratings.empty? %>
-    <%= "#{@beer.name} has not yet been rated!" %>
-  <% else %>
-    <%= "#{@beer.name} has #{pluralize(@beer.ratings.count,'rating')}, average #{round @beer.average_rating}." %>"
+  <p>
+    <% if @beer.ratings.empty? %>
+      <%= "#{@beer.name} has not yet been rated!" %>
+    <% else %>
+      <%= "#{@beer.name} has #{pluralize(@beer.ratings.count,'rating')}, average #{round @beer.average_rating}." %>"
+    <% end %>
+  </p>
+<% end %>
+
+<% if current_user %>
+  <h4>give a rating:</h4>
+
+  <%= form_for(@rating) do |f| %>
+    <%= f.hidden_field :beer_id %>
+    score: <%= f.number_field :score %>
+    <%= f.submit class:"btn btn-primary" %>
   <% end %>
-</p>
+<% end %>
 
 <%= edit_and_destroy_buttons(@beer) %>
