--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,24 +1,27 @@
-<h2>
-  <%= @brewery.name %>
-  <% if not @brewery.active?  %>
-    <span class="badge badge-info">retired</span>
-  <% end %>
-</h2>
+<% cache @brewery do %>
+  <h2>
+    <%= @brewery.name %>
+    <% if not @brewery.active?  %>
+      <span class="badge badge-info">retired</span>
+    <% end %>
+  </h2>
 
-<%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
+  <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
 
-<i>Established in <%= @brewery.year %></i><br>
-Number of products: <%= @brewery.beers.count %><br>
-<p>
-<% @brewery.beers.each do |beer| %>
-  <%= link_to beer.name, beer %>
+  <i>Established in <%= @brewery.year %></i><br>
+  Number of products: <%= @brewery.beers.count %><br>
+  <ul class="list-group">
+    <% @brewery.beers.each do |beer| %>
+      <li class="list-group-item"><%= link_to beer.name, beer %></li>
+    <% end %>
+  </ul>
+  <p>
+    <% if @brewery.ratings.empty? %>
+      <%= "Our products haven't been rated yet." %>
+    <% else %>
+        <%= "Our products have been rated #{pluralize @brewery.ratings.count, 'time'} with an average rating of #{round @brewery.average_rating}"%>
+    <% end %>
+  </p>
 <% end %>
-</p>
-<p>
-  <% if @brewery.ratings.empty? %>
-    <%= "Our products haven't been rated yet." %>
-  <% else %>
-      <%= "Our products have been rated #{pluralize @brewery.ratings.count, 'time'} with an average rating of #{round @brewery.average_rating}"%>
-  <% end %>
 
 <%= edit_and_destroy_buttons(@brewery) %>
