Tehtiin tehtävä 12 SuckerPunchin ja cachen avulla.

--- a/app/views/ratings/_list.html.erb
+++ b/app/views/ratings/_list.html.erb
@@ -1,14 +1,14 @@
 <table class="table table-hover">
   <thead>
   <tr>
-    <% columns.each do |column| %>
+    <% columns&.each do |column| %>
       <th> <%= column.to_s.humanize %></th>
     <% end %>
   </tr>
   </thead>
 
   <tbody>
-  <% values.each do |value| %>
+  <% values&.each do |value| %>
       <tr>
         <% columns.each do |column| %>
           <td><%= value.send(column) %></td>
